wording change & right menu on mobile fixed

--- a/public/landing/assets/css/style.css
+++ b/public/landing/assets/css/style.css
@@ -1535,6 +1535,7 @@ img {
     .site-header #navbar .navbar-nav {
         height: 100%;
         overflow: auto;
+        background-color: #F17526;
     }
 
     .site-header #navbar .close-navbar {
